k8s/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: auth-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/issuer: letsencrypt-staging
spec:
    tls:
        - hosts:
              - localhost
          secretName: tls-cert-secret
    rules:
        - host: localhost
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-server
                            port:
                                number: 80
